# citra

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  1.ReadMe First.txt  CMakeLists.txt  CMakeLists.txt.user.hDeSuF  CONTRIBUTING.md  Doxyfile  FAQ.es.md  README.md  appveyor.ym  appveyor.yml  license.txt  updater-mingw.ps1  updater-msvc.ps1  updater-ubuntu-18.04.sh  updater.ps1
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  audio_types.h  codec.cpp  codec.h  cubeb_sink.cpp  cubeb_sink.h  dsp_interface.cpp  dsp_interface.h  interpolate.cpp  interpolate.h  sdl2_sink.cpp  sink.cpp  sink.h  sink_details.cpp  sink_details.h  time_stretch.cpp  time_stretch.h
src/audio_core/hle/: common.h  filter.cpp  hle.cpp  hle.h  mixers.cpp  mixers.h  pipe.cpp  shared_memory.h  source.cpp  source.h
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp
src/citra_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  cheat_gui.cpp  cheat_gui.h  cheat_gui.ui  cheats.cpp  cheats.h  cheats.ui  cheatsearch.cpp  cheatsearch.h  cheatsearch.ui  compatdb.cpp  compatdb.h  control_panel.cpp  control_panel.h  control_panel.ui  droparea.cpp  droparea.h  game_list.cpp  game_list.h  game_list_p.h  hotkeys.cpp  main.cpp  main.h  main.ui  mii_selector.cpp  mii_selector.h  mii_selector.ui  stereoscopic_controller.cpp  stereoscopic_controller.h  swkbd.cpp  swkbd.h  swkbd.ui  ui_settings.cpp  ui_settings.h
src/citra_qt/applets/: erreula.cpp  erreula.h  swkbd.cpp  swkbd.h
src/citra_qt/camera/: camera_util.cpp  camera_util.h  opencv_camera.cpp  opencv_camera.h  qt_camera_base.cpp  qt_camera_factory.cpp  qt_camera_factory.h  qt_multimedia_camera.cpp  qt_multimedia_camera.h  still_image_camera.cpp  still_image_camera.h
src/citra_qt/configuration/: config.cpp  configure.ui  configure_audio.cpp  configure_audio.h  configure_audio.ui  configure_camera.cpp  configure_camera.h  configure_camera.ui  configure_debug.ui  configure_dialog.cpp  configure_dialog.h  configure_general.cpp  configure_general.h  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_hacks.cpp  configure_hacks.h  configure_hacks.ui  configure_input.cpp  configure_input.h  configure_input.ui  configure_log.cpp  configure_log.h  configure_log.ui  configure_motion_touch.cpp  configure_motion_touch.h  configure_system.cpp  configure_system.h  configure_system.ui  configure_ui.cpp  configure_ui.h  configure_ui.ui  configure_web.cpp  configure_web.h  configure_web.ui  country.cpp
src/citra_qt/debugger/: wait_tree.cpp
src/citra_qt/multiplayer/: chat_room.cpp  chat_room.h  client_room.cpp  client_room.h  client_room.ui  direct_connect.cpp  direct_connect.h  host_room.cpp  host_room.h  host_room.ui  ip_connect.cpp  ip_connect.h  ip_connect.ui  lobby.cpp  lobby.h  lobby_p.h  message.cpp  message.h  state.cpp  state.h  validation.h
src/citra_qt/util/: console.cpp  console.h  util.cpp  util.h
src/common/: CMakeLists.txt  alignment.h  announce_multiplayer_room.h  bit_field.h  bit_set.h  color.h  common_funcs.h  common_paths.h  common_types.h  detached_tasks.cpp  detached_tasks.h  event.h  file_util.cpp  file_util.h  hash.h  math_util.h  memory_util.cpp  misc.cpp  param_package.cpp  ring_buffer.h  scm_rev.cpp.in  scope_exit.h  string_util.cpp  string_util.h  swap.h  thread.cpp  thread_pool.h  thread_queue_list.h  threadsafe_queue.h  timer.cpp  vector_math.h
src/common/logging/: backend.cpp  backend.h  filter.cpp  filter.h  log.h  text_formatter.cpp
src/common/x64/: xbyak_abi.h  xbyak_util.h
src/core/: 3ds.h  CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  cheat_core.cpp  cheat_core.h  core.cpp  core.h  core_timing.cpp  core_timing.h  country.cpp  country.h  memory.cpp  memory.h  movie.cpp  movie.h  perf_stats.cpp  perf_stats.h  settings.cpp  settings.h  telemetry_session.cpp
src/core/arm/: arm_interface.h
src/core/cpu/: common.h  cpu.cpp  cpu.h  cpu_cp15.cpp  cpu_cp15.h
src/core/file_sys/: archive_backend.cpp  archive_backend.h  archive_extsavedata.cpp  archive_extsavedata.h  archive_ncch.cpp  archive_ncch.h  archive_other_savedata.cpp  archive_other_savedata.h  archive_savedata.cpp  archive_savedata.h  archive_sdmc.cpp  archive_sdmc.h  archive_sdmcwriteonly.cpp  archive_sdmcwriteonly.h  archive_selfncch.cpp  archive_selfncch.h  archive_source_sd_savedata.cpp  archive_systemsavedata.cpp  archive_systemsavedata.h  cia_container.cpp  cia_container.h  delay_generator.h  disk_archive.cpp  disk_archive.h  errors.h  file_backend.h  ivfc_archive.cpp  ivfc_archive.h  ncch_container.cpp  ncch_container.h  path_parser.cpp  romfs_reader.cpp  romfs_reader.h  savedata_archive.cpp  seed_db.cpp  seed_db.h  ticket.cpp  ticket.h  title_metadata.cpp  title_metadata.h
src/core/frontend/: discord.cpp  discord.h  emu_window.cpp  emu_window.h  framebuffer_layout.cpp  framebuffer_layout.h  input.h
src/core/hle/: config_mem.cpp  config_mem.h  function_wrappers.h  ipc.h  ipc_helpers.h  romfs.h  shared_page.cpp  shared_page.h  svc.cpp  svc.h
src/core/hw/: gpu.cpp  gpu.h  lcd.cpp  y2r.cpp
src/core/loader/: 3dsx.cpp  (+8 more)
src/dedicated_room/: CMakeLists.txt  citra-room.cpp
src/input_common/: CMakeLists.txt  analog_from_button.cpp  keyboard.cpp  main.cpp  main.h  motion_emu.cpp
src/network/: packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h
src/swkbd/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  command_processor.cpp  geometry_pipeline.cpp  pica.cpp  pica_state.h  pica_types.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer_interface.h  regs.h  regs_framebuffer.h  regs_lighting.h  regs_pipeline.h  regs_rasterizer.h  regs_texturing.h  renderer_base.cpp  renderer_base.h  utils.h  vertex_loader.cpp  vertex_loader.h  video_core.cpp  video_core.h
src/web_service/: CMakeLists.txt  announce_room_json.cpp  json.h  verify_login.cpp  web_backend.cpp  web_backend.h
(+4720 files in other folders)
