add_library(video_core STATIC
    command_processor.cpp
    command_processor.h
    geometry_pipeline.cpp
    geometry_pipeline.h
    pica.cpp
    pica.h
    pica_state.h
    pica_types.h
    primitive_assembly.cpp
    primitive_assembly.h
    regs.h
    regs_framebuffer.h
    regs_lighting.h
    regs_pipeline.h
    regs_rasterizer.h
    regs_shader.h
    regs_texturing.h
    renderer/state.cpp
    renderer/state.h
    renderer/renderer.cpp
    renderer/renderer.h
    renderer/rasterizer.cpp
    renderer/rasterizer.h
    renderer/rasterizer_cache.cpp
    renderer/rasterizer_cache.h
    renderer/resource_manager.h
    renderer/shader_decompiler.cpp
    renderer/shader_decompiler.h
    renderer/shader_gen.cpp
    renderer/shader_gen.h
    renderer/shader_manager.cpp
    renderer/shader_manager.h
    renderer/shader_util.cpp
    renderer/shader_util.h
    renderer/stream_buffer.cpp
    renderer/stream_buffer.h
    renderer/pica_to_gl.h
    shader/shader.cpp
    shader/shader.h
    shader/shader_jit_x64.cpp
    shader/shader_jit_x64_compiler.cpp
    shader/shader_jit_x64.h
    shader/shader_jit_x64_compiler.h
    texture/etc1.cpp
    texture/etc1.h
    texture/texture_decode.cpp
    texture/texture_decode.h
    utils.h
    vertex_loader.cpp
    vertex_loader.h
    video_core.cpp
    video_core.h
)

create_target_directory_groups(video_core)

target_link_libraries(video_core PUBLIC common core xbyak glad nihstro-headers)
